--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^15.2.5",
     "@angular/cdk": "^15.2.3",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-toastr": "^16.1.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
     "rxjs": "~7.5.0",
