--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@microsoft/signalr": "^7.0.4",
+    "@microsoft/signalr-protocol-msgpack": "^7.0.4",
+    "monaco-editor": "^0.36.1",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-monaco-editor-v2": "^15.0.1",
     "ngx-toastr": "^16.1.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
